(bug) fix horizontal scroll

--- a/startC.css
+++ b/startC.css
@@ -1,10 +1,4 @@
 /* TEMPORARY STYLING FILE */
-/*root*/
-html,
-body {
-  width: 100dvw;
-  margin: 0;
-}
 
 /* header */
 .header-img-container {
